--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install Puppeteer dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y ca-certificates fonts-liberation libnss3 libatk-bridge2.0-0 libxss1 libasound2 libatk1.0-0 libgtk-3-0 libx11-xcb1 libgbm-dev
+          sudo apt-get install -y ca-certificates fonts-liberation libnss3 libatk-bridge2.0-0 libxss1 libatk1.0-0 libgtk-3-0 libx11-xcb1 libgbm-dev || true
       - name: Run scraper
         run: npm run scrape
       - name: Commit data.json if changed
