--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-	"name": "eso-ranking-search",
+	"name": "eso-ranking",
 	"version": "0.1.0",
 	"description": "Static webapp and scraper for ESO leaderboards",
 	"dependencies": {
 		"express": "^4.18.2",
-		"puppeteer": "^24.37.5"
+		"puppeteer": "^24.37.5",
+		"styles": "github:flamebuckler/styles"
 	},
 	"scripts": {
 		"scrape": "node scraper/index.js",
 		"start": "node server.js",
-		"dev": "node server.js"
+		"dev": "node server.js",
+		"build:css": "sass --load-path=node_modules public/styles.scss public/styles.css --no-source-map --style=compressed",
+		"watch:css": "sass --load-path=node_modules --watch public/styles.scss:public/styles.css --no-source-map"
+	},
+	"devDependencies": {
+		"sass": "^1.0.0"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/yourname/EsoRanking.git"
+		"url": "https://github.com/flamebuckler/EsoRanking.git"
 	},
 	"license": "MIT"
 }
